--- a/src/main/resources/templates/exam01.html
+++ b/src/main/resources/templates/exam01.html
@@ -5,8 +5,8 @@
 <title>Insert title here</title>
 </head>
 <body>
-<form action="exam01" th:action="@{/exam01/exam01-result}" method="post">
-	名前：<input type="text" name="name"><br>
+<form action="exam01" th:action="@{/exam01/exam01-result}" method="post" th:object="${exam01Form}">
+	名前：<input type="text" name="name" th:field="*{name}"><br>
 	<button>送信</button>
 </form>
 </body>
