Serviceまで使って演習課題２しゅうりょう

--- a/src/main/resources/templates/exam02.html
+++ b/src/main/resources/templates/exam02.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-<form th:action="${/exam02/exam02-result}" method="post" th:object="${exam02Form}">
+<form th:action="@{/exam02/result}" method="post" th:object="${exam02Form}">
 数字を入れてください。<br>
 	<input type="text" name="num1" th:field="*{num1}">+<input type="text" name="num2" th:field="*{num2}">=<br>
 	<button>足し算をする</button>
