--- a/src/main/resources/templates/exam02-result.html
+++ b/src/main/resources/templates/exam02-result.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <h1>足し算結果画面</h1>
-<span th:text="${num1}">dummy</span>+<span th:text="${num2}">dummy</span>=<span></span>
+	<span th:text="${session.exam02Number.num1}">dummy</span>+<span th:text="${session.exam02Number.num2}">dummy</span>=<span th:text="${session.answer}">dummy</span><br>
+<a th:href="@{/exam02/result2}">次へ</a>
 </body>
 </html>
